--- a/index.html
+++ b/index.html
@@ -242,10 +242,10 @@
                     </p>
                     
                     <div class="flex flex-col sm:flex-row gap-4">
-                        <a href="#" class="shine-effect bg-gradient-to-r from-indigo-600 to-purple-600 px-8 py-4 rounded-full font-bold text-white flex items-center justify-center gap-2 text-lg transition duration-300 hover:from-indigo-700 hover:to-purple-700">
+                        <a href="abrela.me/newhybrid" class="shine-effect bg-gradient-to-r from-indigo-600 to-purple-600 px-8 py-4 rounded-full font-bold text-white flex items-center justify-center gap-2 text-lg transition duration-300 hover:from-indigo-700 hover:to-purple-700">
                             <i class="fab fa-android text-xl"></i> Baixar para Android
                         </a>
-                        <a href="#" class="shine-effect bg-gradient-to-r from-blue-600 to-cyan-500 px-8 py-4 rounded-full font-bold text-white flex items-center justify-center gap-2 text-lg transition duration-300 hover:from-blue-700 hover:to-cyan-600">
+                        <a href="https://apps.apple.com/br/app/dmac-iptv/id1524596259" class="shine-effect bg-gradient-to-r from-blue-600 to-cyan-500 px-8 py-4 rounded-full font-bold text-white flex items-center justify-center gap-2 text-lg transition duration-300 hover:from-blue-700 hover:to-cyan-600">
                             <i class="fab fa-apple text-xl"></i> Apple Store
                         </a>
                     </div>
@@ -577,7 +577,7 @@
                     </div>
                     <h3 class="text-xl font-bold mb-2">Android</h3>
                     <p class="text-slate-300 mb-4">Celulares e Tablets</p>
-                    <a href="#" class="inline-block bg-green-600/20 hover:bg-green-600/40 rounded-lg px-4 py-2 transition-colors">
+                    <a href="abrela.me/newhybrid" class="inline-block bg-green-600/20 hover:bg-green-600/40 rounded-lg px-4 py-2 transition-colors">
                         Baixar APK
                     </a>
                 </div>
@@ -589,7 +589,7 @@
                     </div>
                     <h3 class="text-xl font-bold mb-2">Android TV</h3>
                     <p class="text-slate-300 mb-4">TVs e Chromecast</p>
-                    <a href="#" class="inline-block bg-cyan-600/20 hover:bg-cyan-600/40 rounded-lg px-4 py-2 transition-colors">
+                    <a href="abrela.me/newhybrid" class="inline-block bg-cyan-600/20 hover:bg-cyan-600/40 rounded-lg px-4 py-2 transition-colors">
                         Baixar APK
                     </a>
                 </div>
@@ -601,7 +601,7 @@
                     </div>
                     <h3 class="text-xl font-bold mb-2">iOS</h3>
                     <p class="text-slate-300 mb-4">iPhone e iPad</p>
-                    <a href="#" class="inline-block bg-blue-600/20 hover:bg-blue-600/40 rounded-lg px-4 py-2 transition-colors">
+                    <a href="https://apps.apple.com/br/app/dmac-iptv/id1524596259" class="inline-block bg-blue-600/20 hover:bg-blue-600/40 rounded-lg px-4 py-2 transition-colors">
                         Apple Store
                     </a>
                 </div>
@@ -611,9 +611,9 @@
                     <div class="w-24 h-24 rounded-2xl bg-gradient-to-br from-indigo-500/10 to-indigo-700/10 flex items-center justify-center mb-6">
                         <i class="fas fa-laptop text-indigo-400 text-5xl"></i>
                     </div>
-                    <h3 class="text-xl font-bold mb-2">Windows/Mac</h3>
+                    <h3 class="text-xl font-bold mb-2">Windows</h3>
                     <p class="text-slate-300 mb-4">Computadores</p>
-                    <a href="#" class="inline-block bg-indigo-600/20 hover:bg-indigo-600/40 rounded-lg px-4 py-2 transition-colors">
+                    <a href="https://apps.microsoft.com/detail/9MVX7C3Q1156?hl=pt&gl=BR&ocid=pdpshare" class="inline-block bg-indigo-600/20 hover:bg-indigo-600/40 rounded-lg px-4 py-2 transition-colors">
                         Instalar App
                     </a>
                 </div>
