--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                     </p>
                     
                     <div class="flex flex-col sm:flex-row gap-4">
-                        <a href="https://encurtador.com.br/VfImS "target="_blank" class="shine-effect bg-gradient-to-r from-indigo-600 to-purple-600 px-8 py-4 rounded-full font-bold text-white flex items-center justify-center gap-2 text-lg transition duration-300 hover:from-indigo-700 hover:to-purple-700">
+                        <a href="https://abrela.me/newhybrid" target="_blank" class="shine-effect bg-gradient-to-r from-indigo-600 to-purple-600 px-8 py-4 rounded-full font-bold text-white flex items-center justify-center gap-2 text-lg transition duration-300 hover:from-indigo-700 hover:to-purple-700">
                             <i class="fab fa-android text-xl"></i> Baixar para Android
                         </a>
                         <a href="https://apps.apple.com/br/app/dmac-iptv/id1524596259" target="_blank" class="shine-effect bg-gradient-to-r from-blue-600 to-cyan-500 px-8 py-4 rounded-full font-bold text-white flex items-center justify-center gap-2 text-lg transition duration-300 hover:from-blue-700 hover:to-cyan-600">
@@ -577,7 +577,7 @@
                     </div>
                     <h3 class="text-xl font-bold mb-2">Android</h3>
                     <p class="text-slate-300 mb-4">Celulares e Tablets</p>
-                    <a href="https://encurtador.com.br/VfImS" target="_blank" class="inline-block bg-green-600/20 hover:bg-green-600/40 rounded-lg px-4 py-2 transition-colors">
+                    <a href="https://abrela.me/newhybrid" target="_blank" class="inline-block bg-green-600/20 hover:bg-green-600/40 rounded-lg px-4 py-2 transition-colors">
                         Baixar APK
                     </a>
                 </div>
@@ -589,7 +589,7 @@
                     </div>
                     <h3 class="text-xl font-bold mb-2">Android TV</h3>
                     <p class="text-slate-300 mb-4">TVs e Chromecast</p>
-                    <a href="https://encurtador.com.br/VfImS" target="_blank" class="inline-block bg-cyan-600/20 hover:bg-cyan-600/40 rounded-lg px-4 py-2 transition-colors">
+                    <a href="https://abrela.me/newhybrid" target="_blank" class="inline-block bg-cyan-600/20 hover:bg-cyan-600/40 rounded-lg px-4 py-2 transition-colors">
                         Baixar APK
                     </a>
                 </div>
