--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
                     </div>
                     <h3 class="text-xl font-bold mb-2">Android</h3>
                     <p class="text-slate-300 mb-4">Celulares e Tablets</p>
-                    <a href="https://abrela.me/newhybrid" target="_blank" class="inline-block bg-green-600/20 hover:bg-green-600/40 rounded-lg px-4 py-2 transition-colors">
+                    <a href="NewHybrid 1.4.6 Release.apk" target="_blank" class="inline-block bg-green-600/20 hover:bg-green-600/40 rounded-lg px-4 py-2 transition-colors">
                         Baixar APK
                     </a>
                 </div>
@@ -589,7 +589,7 @@
                     </div>
                     <h3 class="text-xl font-bold mb-2">Android TV</h3>
                     <p class="text-slate-300 mb-4">TVs e Chromecast</p>
-                    <a href="https://abrela.me/newhybrid" target="_blank" class="inline-block bg-cyan-600/20 hover:bg-cyan-600/40 rounded-lg px-4 py-2 transition-colors">
+                    <a href="NewHybrid 1.4.6 Release.apk" target="_blank" class="inline-block bg-cyan-600/20 hover:bg-cyan-600/40 rounded-lg px-4 py-2 transition-colors">
                         Baixar APK
                     </a>
                 </div>
