--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                 <a href="https://t.me/" target="_blank" class="p-2 rounded-full bg-blue-500/20 hover:bg-blue-500/30">
                     <i class="fab fa-telegram text-blue-400 text-xl"></i>
                 </a>
-                <a href="https://instagram.com/" target="_blank" class="p-2 rounded-full bg-purple-500/20 hover:bg-purple-500/30">
+                <a href="https://instagram.com/hibridstream?" target="_blank" class="p-2 rounded-full bg-purple-500/20 hover:bg-purple-500/30">
                     <i class="fab fa-instagram text-purple-400 text-xl"></i>
                 </a>
             </div>
@@ -659,7 +659,7 @@
                     </a>
                     
                     <!-- Instagram -->
-                    <a href="https://instagram.com/" target="_blank" class="shine-effect group flex flex-col items-center text-center p-10 bg-gradient-to-b from-purple-900/20 to-purple-900/10 hover:from-purple-900/30 hover:to-purple-900/20">
+                    <a href="https://instagram.com/hibridstream?" target="_blank" class="shine-effect group flex flex-col items-center text-center p-10 bg-gradient-to-b from-purple-900/20 to-purple-900/10 hover:from-purple-900/30 hover:to-purple-900/20">
                         <div class="w-20 h-20 rounded-full bg-purple-500/10 flex items-center justify-center mb-5 group-hover:bg-purple-500/20 transition-colors">
                             <i class="fab fa-instagram text-4xl text-purple-400"></i>
                         </div>
@@ -685,7 +685,7 @@
                         <a href="https://t.me/" target="_blank" class="w-14 h-14 rounded-full bg-blue-500/20 flex items-center justify-center hover:bg-blue-500/30 transition-colors">
                             <i class="fab fa-telegram text-blue-400 text-2xl"></i>
                         </a>
-                        <a href="https://instagram.com/" target="_blank" class="w-14 h-14 rounded-full bg-purple-500/20 flex items-center justify-center hover:bg-purple-500/30 transition-colors">
+                        <a href="https://instagram.com/hibridstream?" target="_blank" class="w-14 h-14 rounded-full bg-purple-500/20 flex items-center justify-center hover:bg-purple-500/30 transition-colors">
                             <i class="fab fa-instagram text-purple-400 text-2xl"></i>
                         </a>
                     </div>
@@ -737,7 +737,7 @@
                                 </li>
                                 <li class="flex items-center">
                                     <i class="fab fa-instagram text-purple-400 mr-3"></i>
-                                    <a href="https://instagram.com/" target="_blank" class="text-slate-400 hover:text-white transition-colors">Instagram</a>
+                                    <a href="https://instagram.com/hibridstream?" target="_blank" class="text-slate-400 hover:text-white transition-colors">Instagram</a>
                                 </li>
                             </ul>
                         </div>
