--- a/index.html
+++ b/index.html
@@ -754,7 +754,7 @@
                     <a href="https://t.me/" target="_blank" class="text-slate-500 hover:text-blue-400 transition-colors">
                         <i class="fab fa-telegram"></i>
                     </a>
-                    <a href="https://instagram.com/" target="_blank" class="text-slate-500 hover:text-purple-400 transition-colors">
+                    <a href="https://instagram.com/hibridstream?" target="_blank" class="text-slate-500 hover:text-purple-400 transition-colors">
                         <i class="fab fa-instagram"></i>
                     </a>
                 </div>
